fix button on small sized window

--- a/src/components/DateCalculator.css
+++ b/src/components/DateCalculator.css
@@ -123,4 +123,7 @@
         height: 80px;
         white-space: nowrap;
     }
+    .button.press {
+        transform-origin: 1050% 350%;
+    }
 }
